Bug 420801 - Muting audio device in the system tray applet crash plasma
Summary: Muting audio device in the system tray applet crash plasma
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 420833 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-30 12:47 UTC by carl
Modified: 2020-05-07 18:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.70
Sentry Crash Report:


Attachments
Video of the crash (45.51 KB, video/x-matroska)
2020-04-30 12:47 UTC, carl
Details
New crash information added by DrKonqi (29.39 KB, text/plain)
2020-05-07 18:35 UTC, Allan Sandfeld
Details

Note You need to log in before you can comment on or make changes to this bug.
Description carl 2020-04-30 12:47:07 UTC
Created attachment 128028 [details]
Video of the crash

SUMMARY

Muting audio device in the system tray applet crash plasma

STEPS TO REPRODUCE
1. click on mute button for a device
2. click on the desktop to collapse the applet

OBSERVED RESULT
crash in step 1 and in the rare case it doesn't crash it crash in step 2

EXPECTED RESULT
don't crash

SOFTWARE/OS VERSIONS
Latest from git (openSUSE krypon) 30 April 2020
Comment 1 Nate Graham 2020-04-30 13:02:29 UTC
Can reproduce.
Comment 2 Nate Graham 2020-04-30 13:05:41 UTC
Here's a backtrace:

#0  0x00007ffff7a4cfb0 in Plasma::Svg::setColorGroup(Plasma::Theme::ColorGroup)
    (this=0x1600000016, group=Plasma::Theme::NormalColorGroup)
    at /home/nate/kde/src/plasma-framework/src/plasma/svg.cpp:768
#1  0x00007ffff54139fe in QtPrivate::QSlotObjectBase::call(QObject*, void**)
    (a=0x7fffffff6d90, r=0x3bc3280, this=0x3466610)
    at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#2  0x00007ffff54139fe in doActivate<false>(QObject*, int, void**)
    (sender=0x4e972a0, signal_index=37, argv=0x7fffffff6d90) at kernel/qobject.cpp:3870
#3  0x00007ffff540e1bf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=<optimized out>, m=m@entry=0x7fffe87717e0 <IconItem::staticMetaObject>, local_signal_index=local_signal_index@entry=7, argv=argv@entry=0x0) at kernel/qobject.cpp:3930
#4  0x00007fffe872c663 in IconItem::colorGroupChanged() (this=<optimized out>)
    at /home/nate/kde/build/plasma-framework/src/declarativeimports/core/corebindingsplugin_autogen/EWIEGA46WW/moc_iconitem.cpp:447
#5  0x00007fffe8752f63 in IconItem::setColorGroup(Plasma::Theme::ColorGroup)
    (this=<optimized out>, group=<optimized out>)
    at /home/nate/kde/src/plasma-framework/src/declarativeimports/core/iconitem.cpp:415
#6  0x00007fffe872e2ad in IconItem::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
    at /home/nate/kde/build/plasma-framework/src/declarativeimports/core/corebindingsplugin_autogen/EWIEGA46WW/moc_iconitem.cpp:323
#7  0x00007ffff72151d6 in QQmlPropertyData::writeProperty(QObject*, void*, QFlags<QQmlPropertyData::WriteFlag>) const
    (flags=..., value=0x7fffffff6e2c, target=<optimized out>, this=<optimized out>)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/include/QtQml/5.14.1/QtQml/private/../../../../../src/qml/qml/qqmlpropertydata_p.h:286
#8  0x00007ffff72151d6 in GenericBinding<2>::doStore<int>(int, QQmlPropertyData const*, QFlags<QQmlPropertyData::WriteFlag>) const
    (flags=..., pd=<optimized out>, value=<optimized out>, this=0x3da2cc0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlbinding.cpp:334
#9  0x00007ffff72151d6 in GenericBinding<2>::write(QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>)
    (this=0x3da2cc0, result=..., isUndefined=<optimized out>, flags=...)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlbinding.cpp:302
#10 0x00007ffff7215cef in QQmlNonbindingBinding::doUpdate(QQmlJavaScriptExpression::DeleteWatcher const&, QFlags<QQmlPropertyData::WriteFlag>, QV4::Scope&)
    (this=0x3da2cc0, watcher=..., flags=..., scope=...)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/include/QtQml/5.14.1/QtQml/private/../../../../../src/qml/jsruntime/qv4scopedvalue_p.h:239
#11 0x00007ffff7212b82 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>)
    (this=0x3da2cc0, flags=...)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlbinding.cpp:186
#12 0x00007ffff71ed82d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**)
    (endpoint=<optimized out>, a=a@entry=0x0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlnotifier.cpp:--Type <RET> for more, q to quit, c to continue without paging--
104
#13 0x00007ffff7196cf4 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) (object=0x3bf1a00, index=51, a=0x0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlengine.cpp:858
#14 0x00007ffff5413585 in doActivate<false>(QObject*, int, void**)
    (sender=0x3bf1a00, signal_index=51, argv=argv@entry=0x0) at kernel/qobject_p.h:110
#15 0x00007ffff540e3dd in QMetaObject::activate(QObject*, int, int, void**)
    (sender=<optimized out>, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=argv@entry=0x0) at kernel/qobject.cpp:3943
#16 0x00007ffff71909c5 in QQmlVMEMetaObject::activate(QObject*, int, void**)
    (this=<optimized out>, object=<optimized out>, index=<optimized out>, args=args@entry=0x0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/include/QtQml/5.14.1/QtQml/private/../../../../../src/qml/qml/qqmlpropertycache_p.h:385
#17 0x00007ffff7190b60 in QQmlVMEMetaObjectEndpoint::tryConnect() (this=0x4e6fbf0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlvmemetaobject.cpp:155
#18 0x00007ffff71ed82d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**)
    (endpoint=<optimized out>, a=a@entry=0x0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlnotifier.cpp:104
#19 0x00007ffff7196cf4 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) (object=0x3c88cb0, index=30, a=0x0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/qml/qml/qqmlengine.cpp:858
#20 0x00007ffff5413585 in doActivate<false>(QObject*, int, void**)
    (sender=0x3c88cb0, signal_index=30, argv=0x0) at kernel/qobject_p.h:110
#21 0x00007ffff540e1bf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x3c88cb0, m=m@entry=0x7ffff799af40 <QQuickMouseArea::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0)
    at kernel/qobject.cpp:3930
#22 0x00007ffff7758f60 in QQuickMouseArea::hoveredChanged() (this=this@entry=0x3c88cb0)
    at .moc/moc_qquickmousearea_p.cpp:564
#23 0x00007ffff775a606 in QQuickMouseArea::setHovered(bool)
    (this=0x3c88cb0, h=<optimized out>)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickmousearea.cpp:1167
#24 0x00007ffff76ba208 in QQuickItem::event(QEvent*) (this=0x3c88cb0, ev=0x7fffffffa7c0)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickitem.cpp:8089
#25 0x00007ffff6106caf in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    (this=this@entry=
    0x4eb8e0, receiver=receiver@entry=0x3c88cb0, e=e@entry=0x7fffffffa7c0)
    at kernel/qapplication.cpp:3684
#26 0x00007ffff610fdf0 in QApplication::notify(QObject*, QEvent*)
    (this=0x7fffffffca60, receiver=0x3c88cb0, e=0x7fffffffa7c0)
    at kernel/qapplication.cpp:3430
--Type <RET> for more, q to quit, c to continue without paging--
#27 0x00007ffff53df002 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
    (receiver=0x3c88cb0, event=0x7fffffffa7c0)
    at ../../include/QtCore/../../src/corelib/kernel/qobject.h:153
#28 0x00007ffff76d1a64 in QQuickWindowPrivate::sendHoverEvent(QEvent::Type, QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool)
    (this=this@entry=0x3766250, type=type@entry=QEvent::HoverLeave, item=item@entry=0x3c88cb0, scenePos=..., lastScenePos=..., modifiers=modifiers@entry=..., timestamp=237228004, accepted=true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1959
#29 0x00007ffff76d2499 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:2014
#30 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#31 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#32 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#33 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#34 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#35 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
--Type <RET> for more, q to quit, c to continue without paging--
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#36 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#37 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#38 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#39 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#40 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#41 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#42 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#43 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
--Type <RET> for more, q to quit, c to continue without paging--
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#44 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#45 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#46 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#47 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#48 0x00007ffff76d2128 in QQuickWindowPrivate::deliverHoverEvent(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool&)
    (this=this@entry=0x3766250, item=<optimized out>, scenePos=..., lastScenePos=..., modifiers=..., timestamp=237228004, accepted=@0x7fffffffbf88: true)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1983
#49 0x00007ffff76d7a95 in QQuickWindowPrivate::handleMouseEvent(QMouseEvent*) (event=
    0x7fffffffc560, this=0x3766250) at /usr/include/qt5/QtGui/qevent.h:129
#50 0x00007ffff76d7a95 in QQuickWindowPrivate::handleMouseEvent(QMouseEvent*)
    (this=0x3766250, event=0x7fffffffc560)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:2270
#51 0x00007ffff59c745d in QWindow::event(QEvent*)
    (this=this@entry=0x3775e80, ev=ev@entry=0x7fffffffc560) at kernel/qwindow.cpp:2359
#52 0x00007ffff76d93a9 in QQuickWindow::event(QEvent*)
    (this=this@entry=0x3775e80, e=e@entry=0x7fffffffc560)
    at /usr/src/debug/libqt5-qtdeclarative-5.14.1-1.3.x86_64/src/quick/items/qquickwindow.cpp:1773
#53 0x00007ffff7f9616b in PlasmaQuick::Dialog::event(QEvent*)
    (this=0x3775e80, event=0x7fffffffc560)
--Type <RET> for more, q to quit, c to continue without paging--
    at /home/nate/kde/src/plasma-framework/src/plasmaquick/dialog.cpp:1363
#54 0x00007ffff6106caf in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    (this=this@entry=0x4eb8e0, receiver=receiver@entry=0x3775e80, e=e@entry=0x7fffffffc560) at kernel/qapplication.cpp:3684
#55 0x00007ffff610fdf0 in QApplication::notify(QObject*, QEvent*)
    (this=0x7fffffffca60, receiver=0x3775e80, e=0x7fffffffc560)
    at kernel/qapplication.cpp:3430
#56 0x00007ffff53df002 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
    (receiver=0x3775e80, event=0x7fffffffc560)
    at ../../include/QtCore/../../src/corelib/kernel/qobject.h:153
#57 0x00007ffff59bc4d3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) (e=e@entry=0x528d930) at kernel/qguiapplication.cpp:2209
#58 0x00007ffff59bdb65 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) (e=e@entry=0x528d930)
    at kernel/qguiapplication.cpp:1941
#59 0x00007ffff599753b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1163
#60 0x00007ffff15c0a6a in xcbSourceDispatch(GSource*, GSourceFunc, gpointer)
    (source=source@entry=0x5c2950) at qxcbeventdispatcher.cpp:105
#61 0x00007ffff396a6e8 in g_main_dispatch (context=0x7fffec005000)
    at ../glib/gmain.c:3309
#62 0x00007ffff396a6e8 in g_main_context_dispatch (context=context@entry=0x7fffec005000)
    at ../glib/gmain.c:3974
#63 0x00007ffff396aa70 in g_main_context_iterate
    (context=context@entry=0x7fffec005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4047
#64 0x00007ffff396aaff in g_main_context_iteration
    (context=0x7fffec005000, may_block=may_block@entry=1) at ../glib/gmain.c:4108
#65 0x00007ffff5435bee in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x5c1a00, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#66 0x00007ffff53ddb9b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)
    (this=this@entry=0x7fffffffc900, flags=..., flags@entry=...)
    at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#67 0x00007ffff53e5972 in QCoreApplication::exec() ()
    at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#68 0x00007ffff59b056c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1866
#69 0x00007ffff6106c25 in QApplication::exec() () at kernel/qapplication.cpp:2824
#70 0x0000000000421550 in main(int, char**) (argc=<optimized out>, argv=<optimized out>)
    at /home/nate/kde/src/plasma-workspace/shell/main.cpp:222
Comment 3 Nate Graham 2020-04-30 16:32:03 UTC
`git bisect` says this was caused by https://phabricator.kde.org/D28470.

Konrad, would you mind taking a look? Keep in mind that Frameworks 5.70 tagging is in two days, so fixing this has some urgency attached to it.
Comment 4 Konrad Materka 2020-04-30 16:40:56 UTC
Yes, I will fix this immediately!
Comment 5 Nate Graham 2020-04-30 16:48:09 UTC
Thanks Konrad!
Comment 6 Konrad Materka 2020-04-30 20:28:37 UTC
Git commit 4b0d4c4bdaed65f52d7f2110c53ce984ef459b5a by Konrad Materka.
Committed on 30/04/2020 at 20:27.
Pushed by kmaterka into branch 'master'.

[PlasmaCore.IconItem] Regression: fix crash on source change

Summary:
When SvgSource is changed, old one is deleted. Connections are not automatically disconnected.
This change disconnects connections and fixes regression introduced in D28470.
FIXED-IN: 5.70

Test Plan:
STEPS TO REPRODUCE
1. click on mute button for a device
2. click on the desktop to collapse the applet
OBSERVED RESULT
crash in step 1 and in the rare case it doesn't crash it crash in step 2
EXPECTED RESULT
don't crash

Reviewers: #plasma, #frameworks, ngraham, davidedmundson

Reviewed By: ngraham

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29314

M  +4    -1    src/declarativeimports/core/iconitem.cpp

https://commits.kde.org/plasma-framework/4b0d4c4bdaed65f52d7f2110c53ce984ef459b5a
Comment 7 Patrick Silva 2020-05-01 04:03:56 UTC
*** Bug 420833 has been marked as a duplicate of this bug. ***
Comment 8 Allan Sandfeld 2020-05-07 18:35:49 UTC
Created attachment 128240 [details]
New crash information added by DrKonqi

plasmashell (5.18.4) using Qt 5.15.0

- What I was doing when the application crashed:

Muting or unmuting the mike. It crashes every single time.

-- Backtrace (Reduced):
#6  0x00007fc6141ecb18 in Plasma::Svg::setColorGroup(Plasma::Theme::ColorGroup) (this=0x557184592720, group=Plasma::Theme::NormalColorGroup) at /src/kdesrc/frameworks/plasma-framework/src/plasma/svg.cpp:768
#7  0x00007fc6120fb7a5 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffc8a454970, r=0x5571849df3e0, this=0x5571849df5d0) at ../../include/QtCore/../../../../qtbase/src/corelib/kernel/qobjectdefs_impl.h:398
#8  doActivate<false>(QObject*, int, void**) (sender=0x5571849c5a80, signal_index=37, argv=0x7ffc8a454970) at /src/qt5/qtbase/src/corelib/kernel/qobject.cpp:3886
[...]
#10 0x00007fc6054c7677 in IconItem::colorGroupChanged() (this=<optimized out>) at /src/kdesrc/build/frameworks/plasma-framework/src/declarativeimports/core/corebindingsplugin_autogen/EWIEGA46WW/moc_iconitem.cpp:447
#11 0x00007fc6054f0617 in IconItem::setColorGroup(Plasma::Theme::ColorGroup) (this=<optimized out>, group=<optimized out>) at /src/kdesrc/frameworks/plasma-framework/src/declarativeimports/core/iconitem.cpp:415